new style ready for publication page

--- a/pubs.html
+++ b/pubs.html
@@ -75,20 +75,14 @@
       </button>
     </div>
     <nav class="navigation--mobile">
-
       <ul class="mobile-nav mobile-nav--main">
-        <li id="menu-item-334"
-          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-334"><a
-            href="index.html">Home</a></li>
-        <li id="menu-item-17"
-          class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-9 current_page_item menu-item-17">
-          <a href="pubs.html" aria-current="page" aria-current="page">Publications</a></li>
-        <li id="menu-item-16" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a
-            href="teaching.html">Teaching</a></li>
-        <li id="menu-item-15" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-15"><a
-            href="student.html">People</a></li>
-        <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a
-            href="leili-bio.html">Bio</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="leili-bio.html">Research</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+        <li class="current-menu-item">
+          <a href="pubs.html">Publications</a></li>
+        <li><a href="student.html">People</a></li>
+        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
       </ul>
     </nav>
   </div>
@@ -112,22 +106,15 @@
           <div class="l-header-col-2">
 
             <div class="site-navigation">
-
-
               <nav class="js-accessible-menu navigation--main" aria-label="Main Navigation" role="navigation">
                 <ul class="nav-list">
-                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-334"><a
-                      href="index.html">Home</a></li>
-                  <li
-                    class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-9 current_page_item menu-item-17">
-                    <a href="pubs.html" aria-current="page" aria-current="page">Publications</a>
-                  </li>
-                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a
-                      href="teaching.html">Teaching</a></li>
-                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-15"><a
-                      href="student.html">People</a></li>
-                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a
-                      href="leili-bio.html">Bio</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="leili-bio.html">Research</a></li>
+                  <li><a href="teaching.html">Teaching</a></li>
+                  <li class="current-menu-item">
+                    <a href="pubs.html">Publications</a></li>
+                  <li><a href="student.html">People</a></li>
+                  <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
                 </ul>
               </nav>
 
@@ -238,28 +225,24 @@
             <div class="templates"></div>
           <!-- div class="sort month" extra="DESC date">
                                                   </div -->
-          <a href="#top" style="display: inline"><em>(Top
+          <a href="#top" style="padding-left: 16%;"><em>(Top
               of the page)</em></a>
         </div>
       </section>
       <div id="bibtex_display"><div class="bibtex_template" style="display: none;"><span
             class="if BIBTEXTYPEKEY==ARTICLE || BIBTEXTYPEKEY==INPROCEEDINGS || BIBTEXTYPEKEY==MISC || BIBTEXTYPEKEY==PHDTHESIS || BIBTEXTYPEKEY==MASTERTHESIS || BIBTEXTYPEKEY==BACHELORSTHESIS || BIBTEXTYPEKEY==TECHREPORT || BIBTEXTYPEKEY==BOOK || BIBTEXTYPEKEY==UNPUBLISHED"><span class="if thumbnail"><img class="bibtexVar bibtexthumb" src="pubs/+THUMBNAIL+" 
-                extra="thumbnail" /></span><span class="if !thumbnail"><span class="paperemoji">📄</span></span><span class="paperentry"><span class="if title"><a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf" extra="BIBTEXKEY"><span
-                  class="title"></span></a>,</span><div class="if author"><span class="author" conjunction=", and"><span class="first"></span> <span
-                  class="last"></span></span>.</div><div><span class="if journal"> <em> <span class="journal"></span>
-                </em>, </span> <span class="if booktitle">In <em> <span class="booktitle">
-                  </span> </em>, </span> <span class="if editor"> <span class="editor"></span>
-                (editors), </span> <span class="if publisher"> <em> <span class="publisher"></span>
-                </em>, </span> <span class="if BIBTEXTYPEKEY==@TECHREPORT">
+                extra="thumbnail" /></span><span class="if !thumbnail"><span class="bibtexthumb"></span></span><span class="paperentry"><span class="if title"><a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf" extra="BIBTEXKEY"><span
+                  class="title"></span></a></span><div class="if author"><span class="author" conjunction=", and"><span class="first"></span> <span
+                  class="last"></span></span></div><div><span class="if journal"><em><span class="journal"></span></em>, </span>
+                    <span class="if booktitle"><em> <span class="booktitle"></span></em>, </span> 
+                    <span class="if BIBTEXTYPEKEY==@TECHREPORT">
                 Technical report <span class="number"></span>,</span> <span class="if BIBTEXTYPEKEY==@PHDTHESIS">
                 Ph.D. Dissertation, </span> <span class="if school"> <span class="school"></span>,
-              </span> <span class="if howpublished"> <span class="howpublished"></span>,
-              </span> <span class="if institution"> <span class="institution"></span>,
-              </span> <span class="if address"> <span class="address"></span>,
-              </span> <span class="if volume"> <span class="volume"></span>, </span>
+              </span>  <span class="if institution"> <span class="institution"></span>,
+              </span> 
               <span class="if journal number">( <span class="number"></span>),
-              </span> <span class="if pages"> pages <span class="pages"></span>,</span>
-              <span class="if year"><span class="year"></span>.</span> <span class="if addendum">(<span
+              </span>
+              <span class="if year"><span class="year"></span></span> <span class="if addendum">(<span
                   class="addendum"></span>)</span>
             </div>
             <div>
