--- a/pubs.html
+++ b/pubs.html
@@ -10,19 +10,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
-  <link href="style/style.min.css" rel="stylesheet" type="text/css" />
-  <script src="jquery-3.4.1.min.js"></script>
-  
+  <script src="jquery-3.7.0.min.js"></script>
+  <link href="style/style.min.css" rel="stylesheet" type="text/css" />  
   <script src="bibtex_js.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <bibtex src="leili.bib"></bibtex>
-<body class="page-template-template-home page-id-2">
+<body class="page-template-template-home page-id-4">
   <script>
     $(function () {
       $("#Fontselector").on("change", function () {
@@ -77,11 +70,11 @@
     <nav class="navigation--mobile">
       <ul class="mobile-nav mobile-nav--main">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leili-bio.html">Research</a></li>
+        <li><a href="research.html">Research</a></li>
         <li><a href="teaching.html">Teaching</a></li>
         <li class="current-menu-item">
           <a href="pubs.html">Publications</a></li>
-        <li><a href="student.html">People</a></li>
+        <li><a href="people.html">People</a></li>
         <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
       </ul>
     </nav>
@@ -109,11 +102,11 @@
               <nav class="js-accessible-menu navigation--main" aria-label="Main Navigation" role="navigation">
                 <ul class="nav-list">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="leili-bio.html">Research</a></li>
+                  <li><a href="research.html">Research</a></li>
                   <li><a href="teaching.html">Teaching</a></li>
                   <li class="current-menu-item">
                     <a href="pubs.html">Publications</a></li>
-                  <li><a href="student.html">People</a></li>
+                  <li><a href="people.html">People</a></li>
                   <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
                 </ul>
               </nav>
