adding bio page

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                                       <li> Time series mining and prediction </li>
                                       <li> Probabilistic inference, Bayesian sampling methods </li> -->
               </ul>
+              <p>
+                <a href="leili-bio.html">Bio</a>
+              </p>
             </div>
           </div>
           <div class="photo-box-container">
