--- a/research.html
+++ b/research.html
@@ -224,12 +224,73 @@
           </ul>
         </div>
       </section>
+      <section id="software" class="highlight-section section">
+        <div class="wrap">
+          <div class="highlight-heading">
+            <h1> Software </h1>
+          </div>
+          <ul>
+            <li><a href="https://github.com/bytedance/lightseq">LightSeq</a>: A
+              High Performance Training and Inference Library for Transformer models. 
+              It is widely used for machine translation, text generation, visual recognition, and more. 
+              With the custom CUDA
+              implementation, it achieves 10x speed-up over the original
+              tensorflow seq2seq package, and faster than other implementations.
+            </li>
+            <li> <a href="https://github.com/bytedance/neurst"> NeurST </a>: A
+              toolbok with readily available models for neural machine
+              translation and speech-to-text translation. </li>
+            <li><a href="https://bayesianlogic.github.io/">BLOG</a>: a
+              probabilistic programming language for machine learning</li>
+            <li><a href="https://github.com/lileicc/swift">Swift</a>: a compiler
+              for the probabilistic programming language BLOG.</li>
+            <li><a href="software/dynammo-r346.zip">DynaMMo</a>: learning
+              toolbox for multi-dimensional co-evolving time series. <a href="https://github.com/lileicc/dynammo">github
+                page</a></li>
+            <li><a href="software/clds-r347.zip">CLDS</a>: complex-valued linear
+              dynamical system</li>
+            <li><a href="software/plif-r345.zip">PLiF</a>: time-shift-invariant
+              feature extraction for time series </li>
+            <li><a href="software/bolero-r349.zip">BoLeRO</a>: human motion
+              capture occlution recovering</li>
+            <li><a href="paralearn/index.html">paralearn</a>: a parallel
+              algorithm for learning Markov models and linear dynamical systems
+              (i.e. Kalman filter) </li>
+            <li><a href="software/mlds-r662.zip">MLDS</a>: learning dynamical
+              model for tensor time series </li>
+          </ul>
+        </div>
+      </section>
+      <section id="dataset" class="highlight-section section">
+        <div class="wrap">
+          <div class="highlight-heading">
+            <h1>Dataset</h1>
+          </div>
+          <ul>
+            <li> TTNews: a dataset for Chinese document summarization. 50,000
+              news articles with summary for training, and 4,000 news articles
+              for testing. [<a href="http://tcci.ccf.org.cn/conference/2018/dldoc/taskgline03.pdf">Task
+                description</a>] [<a href="https://pan.baidu.com/s/1bppQ4z1">Training
+                data</a>] [<a href="https://www.dropbox.com/s/luizl5rftml05nc/nlpcc_summarization_2017-2018_evaluation.zip?dl=0">Testing
+                data and evaluation script</a>] [Reports from <a href="pubs/hua2017overview.pdf">NLPCC2017</a>
+              and <a href="pubs/li2018overview.pdf">NLPCC2018</a>] </li>
+            <li> CNewSum: an extended version of TTNews for Chinese document
+              summarization. It includes 304,307 documents and human-written
+              summaries. It includes additional adequacy-level and
+              deducibility-level labels. [<a href="https://dqwang122.github.io/projects/CNewSum/">Project
+                URL</a>] </li>
+            <li>MLGSum: a multilingual text summarization corpus with 1.2
+              million articles in 12 languages. Average length per article is
+              570 words. [<a href="https://dqwang122.github.io/projects/CALMS/">Project
+                URL] </a> [<a href="https://drive.google.com/file/d/1i9xfOkQ60kixj0rZ-kCo8UCo2fZ51fCY/view?usp=sharing">Data</a>]</li>
+          </ul>
+        </div>
+      </section>      
       <section class="highlight-section section">
         <div class="wrap">
           <div class="highlight-heading">
             <h1>Past Projects</h1>
           </div>
-
           <h2>Probabilistic programming languages and Bayesian inference</h2>
           <ul>
             <li> <a href="http://bayesianlogic.cs.berkeley.edu/">Bayesian Logic
