fix wrong links

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                 </li>
                 <li><img src="images/new-icon.gif" style="height:1.2em" />
                   3 new papers are accepted to ICML 2023. Topics include <a
-                    href="https://arxiv.org/abs/2305.00386">Watermark for Language Generation</a>, <a
-                    href="https://arxiv.org/abs/2302.03162">Speed up Diffusion</a>, <a
-                    href="https://arxiv.org/abs/2302.02285">Protein Design</a>.
+                    href="https://arxiv.org/abs/2305.00386">Protein Design</a>, <a
+                    href="https://arxiv.org/abs/2302.03162">Watermark for Language Generation</a>, <a
+                    href="https://arxiv.org/abs/2302.02285">Speed up Diffusion</a>.
                 </li>
                 <li><img src="images/new-icon.gif" style="height:1.2em" />
                   New papers at EMNLP 2022: <a href="https://arxiv.org/abs/2210.03312">Model Protection</a>
