add siqi's website

--- a/people.html
+++ b/people.html
@@ -97,7 +97,7 @@
 
           <div class="people-card-grid">
 
-            <a class="people-card" href="" target="">
+            <a class="people-card" href="https://owaski.github.io">
 
 
               <div class="box-left">
