--- a/teaching.html
+++ b/teaching.html
@@ -91,13 +91,14 @@
       <section class="section">
         <div class="wrap">
           <ul>
-            <li><a href="course/dl23w/">CS190I Deep Learning (undergrad, Winter 2023)</a></li>
-            <li><a href="course/ml22fa/index.html">CS291K Machine Learning
+            <li><a href="course/11737mnlp23fa/">CMU 11737 Multilingual NLP (graduate, Fall 2023)</a></li>
+            <li><a href="course/dl23w/">UCSB CS190I Deep Learning (undergrad, Winter 2023)</a></li>
+            <li><a href="course/ml22fa/index.html">UCSB CS291K Machine Learning
                 (graduate, Fall 2022)<br />
               </a></li>
-            <li><a href="course/mldl22w/index.html"> CS165B Machine Learning
+            <li><a href="course/mldl22w/index.html">UCSB CS165B Machine Learning
                 (undergrad, Winter 2022) - focus on deep learning</a> </li>
-            <li><a href="course/dl4mt21fa/index.html">CS291K Deep Learning for
+            <li><a href="course/dl4mt21fa/index.html">UCSB CS291K Deep Learning for
                 Machine Translation (graduate, Fall 2021)</a> </li>
           </ul>
         </div>
