--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
           <div>
             <div class="hero-content">
               <h1>Lei Li</h1>
-              <h6>Univeristy of California Santa Barbara</h6>
+              <h6>University of California Santa Barbara</h6>
               <p>Co-Director, <a href="http://nlp.cs.ucsb.edu/">UCSB NLP Group</a><br />
-                Assistant Professor,
+                Associate Professor,
                 <a href="https://www.cs.ucsb.edu">Computer Science Department</a>
               </p>
               <p>Research area: natural language processing, machine learning, data
@@ -115,7 +115,7 @@
               <p> Topics: </p>
               <ul>
                 <li> Machine translation, speech translation, multilingual NLP. </li>
-                <li> LLM, text generation, program synthesis, reasoning. </li>
+                <li> LLM, text generation, program synthesis, reasoning, privacy, watermark. </li>
                 <li> AI for drug design </li>
                 <li> Efficient ML </li>
                 <!-- <li> Green and Efficient ML </li>
